# holdings-monitor

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/profiles/examples/: upamc-00981A.yaml
deploy/systemd/: README.md  holdings-monitor.env.example  holdings-monitor.service.example  holdings-monitor.timer.example  run_randomized_monitor.sh
scripts/: run_once.sh
src/holdings_monitor/: cli.py  config.py  env.py  exceptions.py  logging_utils.py  time_utils.py
src/holdings_monitor/domain/: models.py
src/holdings_monitor/notify/: base.py  line.py  stdout.py
src/holdings_monitor/pipeline/: differ.py  run_monitor.py  summary.py  validator.py
src/holdings_monitor/sources/: base.py  parsing.py  upamc_excel.py
src/holdings_monitor/storage/: files.py  sqlite.py
tests/unit/: test_differ.py  test_parser.py
